knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/Opportunity__x.object-meta.xml
<CustomObject>
    <externalDataSource>CORP_Org</externalDataSource>
    <externalName>Opportunity</externalName>
    <label>Opportunity / Job</label>
    <pluralLabel>Opportunities  / Jobs</pluralLabel>
</CustomObject>