knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Account_Owner_name_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_name_c__c</fullName>
    <externalDeveloperName>Account_Owner_name__c</externalDeveloperName>
    <label>Account Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>