knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Acute_Beds_c__c.field-meta.xml
<CustomField>
    <fullName>Acute_Beds_c__c</fullName>
    <externalDeveloperName>Acute_Beds__c</externalDeveloperName>
    <label>Acute Beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>