knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <externalDeveloperName>Amount</externalDeveloperName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>