knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Assistant_c__c.field-meta.xml
<CustomField>
    <fullName>Assistant_c__c</fullName>
    <externalDeveloperName>Assistant__c</externalDeveloperName>
    <label>Assistant</label>
    <length>18</length>
    <type>Text</type>
</CustomField>