knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/CEO_c__c.field-meta.xml
<CustomField>
    <fullName>CEO_c__c</fullName>
    <externalDeveloperName>CEO__c</externalDeveloperName>
    <label>CEO</label>
    <length>18</length>
    <type>Text</type>
</CustomField>