knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/CFO_c__c.field-meta.xml
<CustomField>
    <fullName>CFO_c__c</fullName>
    <externalDeveloperName>CFO__c</externalDeveloperName>
    <label>CFO</label>
    <length>18</length>
    <type>Text</type>
</CustomField>