knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Change_History_c__c.field-meta.xml
<CustomField>
    <fullName>Change_History_c__c</fullName>
    <externalDeveloperName>Change_History__c</externalDeveloperName>
    <label>Change History</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>