knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/CMVS_Trial_c__c.field-meta.xml
<CustomField>
    <fullName>CMVS_Trial_c__c</fullName>
    <externalDeveloperName>CMVS_Trial__c</externalDeveloperName>
    <label>CMVS Trial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>