knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/CNO_c__c.field-meta.xml
<CustomField>
    <fullName>CNO_c__c</fullName>
    <externalDeveloperName>CNO__c</externalDeveloperName>
    <label>CNO</label>
    <length>18</length>
    <type>Text</type>
</CustomField>