knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Contacted_Comment_c__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Comment_c__c</fullName>
    <externalDeveloperName>Contacted_Comment__c</externalDeveloperName>
    <label>Contacted Comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>