knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Contract_Proposal_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Proposal_c__c</fullName>
    <externalDeveloperName>Contract_Proposal__c</externalDeveloperName>
    <label>Contract/Proposal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>