knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Contract_Sent_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sent_Date_c__c</fullName>
    <externalDeveloperName>Contract_Sent_Date__c</externalDeveloperName>
    <label>Contract Sent Date</label>
    <type>Date</type>
</CustomField>