knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Corporate_Entity_c__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Entity_c__c</fullName>
    <externalDeveloperName>Corporate_Entity__c</externalDeveloperName>
    <label>Corporate Entity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>