knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Corporate_Entity_Established_c__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Entity_Established_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Corporate_Entity_Established__c</externalDeveloperName>
    <label>Corporate Entity Established</label>
    <type>Checkbox</type>
</CustomField>