knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Coverage_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Type_c__c</fullName>
    <externalDeveloperName>Coverage_Type__c</externalDeveloperName>
    <label>Coverage Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>