knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Current_Provider_c__c.field-meta.xml
<CustomField>
    <fullName>Current_Provider_c__c</fullName>
    <externalDeveloperName>Current_Provider__c</externalDeveloperName>
    <label>Current Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>