knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Date_Cleared_for_Proposal_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Cleared_for_Proposal_c__c</fullName>
    <externalDeveloperName>Date_Cleared_for_Proposal__c</externalDeveloperName>
    <label>Date Cleared for Proposal</label>
    <type>Date</type>
</CustomField>