knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Date_Contract_Approved_by_Execs_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Contract_Approved_by_Execs_c__c</fullName>
    <externalDeveloperName>Date_Contract_Approved_by_Execs__c</externalDeveloperName>
    <label>Date Contract Approved by Execs</label>
    <type>Date</type>
</CustomField>