knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Date_Final_Contract_Sent_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Final_Contract_Sent_c__c</fullName>
    <externalDeveloperName>Date_Final_Contract_Sent__c</externalDeveloperName>
    <label>Date Final Contract Sent</label>
    <type>Date</type>
</CustomField>