knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Date_HM_Info_Sheet_Received_c__c.field-meta.xml
<CustomField>
    <fullName>Date_HM_Info_Sheet_Received_c__c</fullName>
    <externalDeveloperName>Date_HM_Info_Sheet_Received__c</externalDeveloperName>
    <label>Date HM Info Sheet Received</label>
    <type>Date</type>
</CustomField>