knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Date_Job_Opened_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Job_Opened_c__c</fullName>
    <externalDeveloperName>Date_Job_Opened__c</externalDeveloperName>
    <label>Date Job Opened</label>
    <type>Date</type>
</CustomField>