knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Date_Proposal_Approved_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Proposal_Approved_c__c</fullName>
    <externalDeveloperName>Date_Proposal_Approved__c</externalDeveloperName>
    <label>Date Proposal Approved</label>
    <type>Date</type>
</CustomField>