knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Date_Proposal_Finalized_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Proposal_Finalized_c__c</fullName>
    <externalDeveloperName>Date_Proposal_Finalized__c</externalDeveloperName>
    <label>Date Proposal Finalized</label>
    <type>Date</type>
</CustomField>