knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Date_Proposal_Sent_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Proposal_Sent_c__c</fullName>
    <externalDeveloperName>Date_Proposal_Sent__c</externalDeveloperName>
    <label>Date EM Proposal Sent</label>
    <type>Date</type>
</CustomField>