knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Days_Open_c__c.field-meta.xml
<CustomField>
    <fullName>Days_Open_c__c</fullName>
    <externalDeveloperName>Days_Open__c</externalDeveloperName>
    <label>Days Open</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Number</type>
</CustomField>