knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Decision_Due_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Decision_Due_Date_c__c</fullName>
    <externalDeveloperName>Decision_Due_Date__c</externalDeveloperName>
    <label>Decision Due Date</label>
    <type>Date</type>
</CustomField>