knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Division_c__c.field-meta.xml
<CustomField>
    <fullName>Division_c__c</fullName>
    <externalDeveloperName>Division__c</externalDeveloperName>
    <label>Division</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>