knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/ECM_Product_c__c.field-meta.xml
<CustomField>
    <fullName>ECM_Product_c__c</fullName>
    <externalDeveloperName>ECM_Product__c</externalDeveloperName>
    <label>ECM Product</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>