knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/ED_HM_Relationship_c__c.field-meta.xml
<CustomField>
    <fullName>ED_HM_Relationship_c__c</fullName>
    <externalDeveloperName>ED_HM_Relationship__c</externalDeveloperName>
    <label>ED/HM Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>