knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/ED_Nurse_c__c.field-meta.xml
<CustomField>
    <fullName>ED_Nurse_c__c</fullName>
    <externalDeveloperName>ED_Nurse__c</externalDeveloperName>
    <label>ED Nurse</label>
    <length>18</length>
    <type>Text</type>
</CustomField>