knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/ED_Volume_c__c.field-meta.xml
<CustomField>
    <fullName>ED_Volume_c__c</fullName>
    <externalDeveloperName>ED_Volume__c</externalDeveloperName>
    <label>ED Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>