knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/ED_Volume_Range_c__c.field-meta.xml
<CustomField>
    <fullName>ED_Volume_Range_c__c</fullName>
    <externalDeveloperName>ED_Volume_Range__c</externalDeveloperName>
    <label>ED Volume Range</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>