knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/EM_Contract_Gross_Margin_Percent_c__c.field-meta.xml
<CustomField>
    <fullName>EM_Contract_Gross_Margin_Percent_c__c</fullName>
    <externalDeveloperName>EM_Contract_Gross_Margin_Percent__c</externalDeveloperName>
    <label>EM Contract Gross Margin %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>