knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/EM_Expected_Contract_Revenue_c__c.field-meta.xml
<CustomField>
    <fullName>EM_Expected_Contract_Revenue_c__c</fullName>
    <externalDeveloperName>EM_Expected_Contract_Revenue__c</externalDeveloperName>
    <label>EM Expected Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>