knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/EM_Prospect_Score_c__c.field-meta.xml
<CustomField>
    <fullName>EM_Prospect_Score_c__c</fullName>
    <externalDeveloperName>EM_Prospect_Score__c</externalDeveloperName>
    <label>EM Prospect Score</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>