knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/EM_Venue_Rating_Date_c__c.field-meta.xml
<CustomField>
    <fullName>EM_Venue_Rating_Date_c__c</fullName>
    <externalDeveloperName>EM_Venue_Rating_Date__c</externalDeveloperName>
    <label>EM Venue Rating Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>