knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Employee_Referral_c__c.field-meta.xml
<CustomField>
    <fullName>Employee_Referral_c__c</fullName>
    <externalDeveloperName>Employee_Referral__c</externalDeveloperName>
    <label>Employee Referral</label>
    <length>18</length>
    <type>Text</type>
</CustomField>