knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Engagement_Fee_c__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Fee_c__c</fullName>
    <externalDeveloperName>Engagement_Fee__c</externalDeveloperName>
    <label>Engagement Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>