knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/ER_Group_c__c.field-meta.xml
<CustomField>
    <fullName>ER_Group_c__c</fullName>
    <externalDeveloperName>ER_Group__c</externalDeveloperName>
    <label>ER Group</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>