knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Expected_Contract_Signature_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Expected_Contract_Signature_Date_c__c</fullName>
    <externalDeveloperName>Expected_Contract_Signature_Date__c</externalDeveloperName>
    <label>Expected Contract Signature Date</label>
    <type>Date</type>
</CustomField>