knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Expected_Start_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Expected_Start_Date_c__c</fullName>
    <externalDeveloperName>Expected_Start_Date__c</externalDeveloperName>
    <label>Expected Start Date</label>
    <type>Date</type>
</CustomField>