knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Expected_Win_c__c.field-meta.xml
<CustomField>
    <fullName>Expected_Win_c__c</fullName>
    <externalDeveloperName>Expected_Win__c</externalDeveloperName>
    <label>Expected Win</label>
    <length>255</length>
    <type>Text</type>
</CustomField>