knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/ExpectedRevenue__c.field-meta.xml
<CustomField>
    <fullName>ExpectedRevenue__c</fullName>
    <externalDeveloperName>ExpectedRevenue</externalDeveloperName>
    <label>Expected Amount</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Number</type>
</CustomField>