knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Follow_up_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Comments_c__c</fullName>
    <externalDeveloperName>Follow_up_Comments__c</externalDeveloperName>
    <label>Follow up Comments</label>
    <type>TextArea</type>
</CustomField>