knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/ForecastCategory__c.field-meta.xml
<CustomField>
    <fullName>ForecastCategory__c</fullName>
    <externalDeveloperName>ForecastCategory</externalDeveloperName>
    <label>Forecast Category</label>
    <length>40</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>