knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/ForecastCategoryName__c.field-meta.xml
<CustomField>
    <fullName>ForecastCategoryName__c</fullName>
    <externalDeveloperName>ForecastCategoryName</externalDeveloperName>
    <label>Forecast Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>