knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/FTE_c__c.field-meta.xml
<CustomField>
    <fullName>FTE_c__c</fullName>
    <externalDeveloperName>FTE__c</externalDeveloperName>
    <label>FTE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>