knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/HIM_Director_c__c.field-meta.xml
<CustomField>
    <fullName>HIM_Director_c__c</fullName>
    <externalDeveloperName>HIM_Director__c</externalDeveloperName>
    <label>HIM Director</label>
    <length>18</length>
    <type>Text</type>
</CustomField>