knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/HM_Account_c__c.field-meta.xml
<CustomField>
    <fullName>HM_Account_c__c</fullName>
    <externalDeveloperName>HM_Account__c</externalDeveloperName>
    <label>HM Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>