knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/HM_Contract_Gross_Margin_c__c.field-meta.xml
<CustomField>
    <fullName>HM_Contract_Gross_Margin_c__c</fullName>
    <externalDeveloperName>HM_Contract_Gross_Margin__c</externalDeveloperName>
    <label>HM Contract Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>