knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/HM_Group_c__c.field-meta.xml
<CustomField>
    <fullName>HM_Group_c__c</fullName>
    <externalDeveloperName>HM_Group__c</externalDeveloperName>
    <label>HM Group</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>