knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/HM_Region_c__c.field-meta.xml
<CustomField>
    <fullName>HM_Region_c__c</fullName>
    <externalDeveloperName>HM_Region__c</externalDeveloperName>
    <label>HM Region</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>