knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Hospital_Affliliation_c__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Affliliation_c__c</fullName>
    <externalDeveloperName>Hospital_Affliliation__c</externalDeveloperName>
    <label>Hospital Affliliation</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>