knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Info_Confirmed_c__c.field-meta.xml
<CustomField>
    <fullName>Info_Confirmed_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Info_Confirmed__c</externalDeveloperName>
    <label>Info Confirmed</label>
    <type>Checkbox</type>
</CustomField>