knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Initial_Contact_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact_Date_c__c</fullName>
    <externalDeveloperName>Initial_Contact_Date__c</externalDeveloperName>
    <label>Initial Contact Date</label>
    <type>Date</type>
</CustomField>