knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Lead_Gen_Owner_c__c.field-meta.xml
<CustomField>
    <fullName>Lead_Gen_Owner_c__c</fullName>
    <externalDeveloperName>Lead_Gen_Owner__c</externalDeveloperName>
    <label>Lead Gen Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>