knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Lead_LP_Position_c__c.field-meta.xml
<CustomField>
    <fullName>Lead_LP_Position_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Lead_LP_Position__c</externalDeveloperName>
    <label>Lead MLP Position</label>
    <type>Checkbox</type>
</CustomField>