knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Lead_Source_Detail_c__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail_c__c</fullName>
    <externalDeveloperName>Lead_Source_Detail__c</externalDeveloperName>
    <label>Lead Source Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>