knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <externalDeveloperName>LeadSource</externalDeveloperName>
    <label>Lead Source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>