knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Location_c__c.field-meta.xml
<CustomField>
    <fullName>Location_c__c</fullName>
    <externalDeveloperName>Location__c</externalDeveloperName>
    <label>Location</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>