knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Mark_for_Deletion_c__c.field-meta.xml
<CustomField>
    <fullName>Mark_for_Deletion_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Mark_for_Deletion__c</externalDeveloperName>
    <label>Mark for Deletion</label>
    <type>Checkbox</type>
</CustomField>