knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Mark_for_Deletion_Comment_c__c.field-meta.xml
<CustomField>
    <fullName>Mark_for_Deletion_Comment_c__c</fullName>
    <externalDeveloperName>Mark_for_Deletion_Comment__c</externalDeveloperName>
    <label>Mark for Deletion Comment</label>
    <type>TextArea</type>
</CustomField>