knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Medicaid_Discharges_c__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Discharges_c__c</fullName>
    <externalDeveloperName>Medicaid_Discharges__c</externalDeveloperName>
    <label>Medicaid Discharges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>