knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Medical_Director_Position_c__c.field-meta.xml
<CustomField>
    <fullName>Medical_Director_Position_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Medical_Director_Position__c</externalDeveloperName>
    <label>Medical Director Position</label>
    <type>Checkbox</type>
</CustomField>