knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Medicare_Discharges_c__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Discharges_c__c</fullName>
    <externalDeveloperName>Medicare_Discharges__c</externalDeveloperName>
    <label>Medicare Discharges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>