knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Medicare_Obs_c__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Obs_c__c</fullName>
    <externalDeveloperName>Medicare_Obs__c</externalDeveloperName>
    <label>Medicare Obs %</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>