knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <externalDeveloperName>Name</externalDeveloperName>
    <label>Opportunity / Job Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>