knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/NPR_c__c.field-meta.xml
<CustomField>
    <fullName>NPR_c__c</fullName>
    <externalDeveloperName>NPR__c</externalDeveloperName>
    <label>NPR</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>