knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Number_of_Beds_c__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Beds_c__c</fullName>
    <externalDeveloperName>Number_of_Beds__c</externalDeveloperName>
    <label>Number of Beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>