knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Operating_Income_c__c.field-meta.xml
<CustomField>
    <fullName>Operating_Income_c__c</fullName>
    <externalDeveloperName>Operating_Income__c</externalDeveloperName>
    <label>Operating Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>